--- a/web/reader.html
+++ b/web/reader.html
@@ -86,8 +86,7 @@
                             Navegação
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="pokedb">Atualizar database de Pokemons</a>
-                            <a class="dropdown-item" href="json_update">Forçar atualização de arquvios JSONs</a>
+                            <a class="dropdown-item" href="json_update">Atualizar arquivos JSONs</a>
                             <!-- <div class="dropdown-divider"></div> -->
                         </div>
                     </li>
